--- a/plugin.xml
+++ b/plugin.xml
@@ -12,30 +12,16 @@
         <engine name="cordova" version=">=3.0.0" />
     </engines>    
 
-    <js-module src="www/audiotoggle.js" name="AudioToggle">
-        <clobbers target="AudioToggle" />
+    <js-module src="www/audiotoggle.js" name="toggleaudio">
+        <clobbers target="toggleaudio" />
     </js-module>
-	
-    <platform name="ios">
-        <config-file target="config.xml" parent="/*">
-			<feature name="AudioTogglePlugin">
-				<param name="ios-package" value="AudioTogglePlugin" />
-			</feature>
-        </config-file>
-
-        <header-file src="src/ios/AudioTogglePlugin.h" />		
-        <source-file src="src/ios/AudioTogglePlugin.m" />
-
-        <framework src="AVFoundation.framework" />
-		<framework src="AudioToolbox.framework" />
-    </platform>
 
     <platform name="android">
         <source-file src="src/android/com/dooble/audiotoggle/AudioTogglePlugin.java" target-dir="src/com/dooble/audiotoggle" />
   
         <config-file target="res/xml/config.xml" parent="/*">
-			<feature name="AudioTogglePlugin">
-				<param name="android-package" value="com.dooble.audiotoggle.AudioTogglePlugin" />
+			<feature name="toggleaudioplugin">
+				<param name="android-package" value="com.dooble.audiotoggle.toggleaudioplugin" />
 			</feature>	
         </config-file>
 
